# rules_mypy

./: .bazelignore  .gitignore  .mypy.ini  .spr.yml  BUILD.bazel  MODULE.bazel  Makefile  README.md  WORKSPACE  gazelle_python.yaml  pip.bzl  renovate.json  repositories.bzl  requirements.txt  requirements_lock.txt  requirements_lock_3_10.txt  requirements_lock_3_11.txt
.github/workflows/: main.yml  release.yml  release_prep.sh
.trunk/: trunk.yaml
config/: BUILD.bazel
rules/mypy/: BUILD.bazel  __main__.py  mypy.bash.tpl  mypy.bzl  stubs.bzl
rules/proto/: BUILD.bazel  proto.bzl
scripts/: verify-clean.bash
tests/: BUILD.bazel  google_passes.py  pandas_fails.py  pandas_missing_stubs.py  print_python_version.py  proto_fails.py  proto_passes.py
tests/proto/example/v1/: BUILD.bazel  example.proto
tests/shell/: test_helper.sh  test_mypy.sh  test_runner.sh
tests/test_transitive/: BUILD.bazel  main_fails.py  main_passes.py
tests/test_transitive/square/: BUILD.bazel  square_fails.py  square_passes.py
