# Allow mypy config to be overridden by end user.
label_flag(
    name = "mypy_config",
    build_setting_default = "//:.mypy.ini",
    visibility = ["//visibility:public"],
)

# Allow venv to be overridden by end user.
label_flag(
    name = "mypy_venv",
    build_setting_default = "//rules/mypy:venv",
    visibility = ["//visibility:public"],
)
