load("@rules_mypy_pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "pandas_passes",
    srcs = ["pandas_passes.py"],
    deps = [
        requirement("pandas"),
    ],
)

py_binary(
    name = "pandas_fails",
    srcs = ["pandas_fails.py"],
    deps = [
        requirement("pandas"),
    ],
)

py_binary(
    name = "google_passes",
    srcs = ["google_passes.py"],
    deps = [
        requirement("protobuf"),
    ],
)

py_binary(
    name = "proto_passes",
    srcs = ["proto_passes.py"],
    deps = [
        requirement("protobuf"),
        "//tests/proto/example/v1",
    ],
)

py_binary(
    name = "proto_fails",
    srcs = ["proto_fails.py"],
    deps = [
        "//tests/proto/example/v1",
    ],
)

py_library(
    name = "tests",
    srcs = [
        "google_passes.py",
        "pandas_fails.py",
        "pandas_passes.py",
        "proto_fails.py",
        "proto_passes.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//tests/proto/example/v1",
        "@rules_mypy_pip_deps_pandas//:pkg",
        "@rules_mypy_pip_deps_protobuf//:pkg",
    ],
)
