load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "pandas_passes",
    srcs = ["pandas_passes.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@rules_mypy_pip_deps//pandas",
    ],
)

py_binary(
    name = "pandas_fails",
    srcs = ["pandas_fails.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@rules_mypy_pip_deps//pandas",
    ],
)

py_binary(
    name = "google_passes",
    srcs = ["google_passes.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@rules_mypy_pip_deps//protobuf",
    ],
)

py_binary(
    name = "proto_passes",
    srcs = ["proto_passes.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//tests/proto/example/v1",
        "@rules_mypy_pip_deps//protobuf",
    ],
)

py_binary(
    name = "proto_fails",
    srcs = ["proto_fails.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//tests/proto/example/v1",
    ],
)

py_library(
    name = "tests",
    srcs = [
        "google_passes.py",
        "pandas_fails.py",
        "pandas_passes.py",
        "proto_fails.py",
        "proto_passes.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//tests/proto/example/v1",
        "@rules_mypy_pip_deps//pandas",
        "@rules_mypy_pip_deps//protobuf",
    ],
)
