load("@pip//:requirements.bzl", "all_requirements")
load("@rules_python//python:defs.bzl", "py_binary")

exports_files([
    "mypy.bash.tpl",
    "__main__.py",
])

py_binary(
    name = "__main__",
    srcs = ["__main__.py"],
    main = "__main__.py",
    visibility = ["//visibility:public"],
    deps = all_requirements,  # keep
)
