load("@pip//:requirements.bzl", "all_requirements")
load("@rules_python//python:defs.bzl", "py_binary")
load("//rules/mypy:stubs.bzl", "mypy_stubs")
load("//rules/venv:venv.bzl", "py_venv")

exports_files([
    "mypy.bash.tpl",
    "__main__.py",
])

py_binary(
    name = "__main__",
    srcs = ["__main__.py"],
    main = "__main__.py",
    visibility = ["//visibility:public"],
    deps = all_requirements,  # keep
)

mypy_stubs(
    name = "all_stubs",
    visibility = ["//visibility:public"],
    deps = all_requirements,  # keep
)

py_venv(
    name = "virtualenv",
    visibility = ["//visibility:public"],
    deps = all_requirements,
)
